# padme-core

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  release.yaml  set_version.py
src/: bitops.rs  bus.rs  cpu.rs  default.rs  error.rs  interrupt.rs  joypad.rs  lib.rs  ram.rs  region.rs  rom.rs  serial.rs  system.rs  timer.rs
src/apu/: apu.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs  modulation.rs
src/collections/: mod.rs  queue.rs
src/ppu/: mod.rs  pipeline.rs  pixel.rs  ppu.rs  sprite.rs
src/rom/: header.rs  mbc.rs  mod.rs  rom.rs
tests/: cpu-instrs.rs  rom.rs
